# arena3

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
chapter1_transformer_interp/exercises/part1_transformer_from_scratch/: answers.ipynb  solutions.py
chapter1_transformer_interp/exercises/part2_intro_to_mech_interp/: answers.ipynb  solutions.py  tests.py
chapter1_transformer_interp/exercises/part3_indirect_object_identification/: answers.ipynb  answers_5_paper_replication.ipynb  solutions.py  tests.py
chapter1_transformer_interp/exercises/part4_superposition_and_saes/: solutions.py  tests.py  utils.py
mj/: C1P1__mj_implementation.py  C1P1_solutions.py  C1P1_tests.py  C1P1_transformer_from_scratch__S1_inputs_outputs.ipynb  C1P1_transformer_from_scratch__S2_clean_transformer.ipynb  C1P1_transformer_from_scratch__S3_training.ipynb  C1P1_transformer_from_scratch__S4_sampling.ipynb  C1P3_1_solutions.py  C1P3_1_solutions_double_descent.py  C1P3_1_superposition_saes__superposition_nonprivileged_basis.ipynb  C1P3_1_tests.py  C1P3_1_utils.py  C1_plotly_utils.py
