[tool.poetry]
name = "arena-3-0"
version = "0.1.0"
description = ""
authors = ["Matthew Jennings <matthew.jennings@outlook.com.au>"]
readme = "README.md"
packages = [{include = "arena_3"}]

[tool.poetry.dependencies]
"AutoROM.accept-rom-license" = {extras = ["accept-rom-license"], version = "^0.6.1"}
accelerate = "^0.28.0"
ale-py = "^0.8.1"
black = "^24.3.0"
circuitsvis = {git = "https://github.com/callummcdougall/CircuitsVis.git", subdirectory = "python"}
datasets = "^2.18.0"
diffusers = "^0.27.2"
eindex-callum = {git = "https://github.com/callummcdougall/eindex.git"}
einops = "^0.7.0"
frozendict = "^2.4.1"
ftfy = "^6.2.0"
gdown = "^5.1.0"
gym = "==0.23.1"
huggingface-hub = "^0.22.2"
imageio-ffmpeg = "^0.4.9"
ipykernel = "^6.29.4"
ipywidgets = "==7.7.1"
jaxtyping = "^0.2.28"
jupyter = "^1.0.0"
jupyterlab-widgets = "==1.1.1"
matplotlib = "^3.8.4"
mediapy = "^1.2.0"
mujoco = "^3.1.3"
neel-plotly = {git = "https://github.com/neelnanda-io/neel-plotly"}
nnsight = "^0.2.11"
notebook = "^7.1.2"
numpy-stl = "^3.1.1"
openai = "==0.28"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"
plotly = "^5.20.0"
plotly-utils = "^0.0.3"
portalocker = "==2.0.0"
pre-commit = "^3.7.0"
protobuf = "==3.20.3"
pygame = "^2.5.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"
python = "^3.11"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
streamlit = "^1.33.0"
streamlit-antd-components = "==0.2.5"
streamlit-image-select = "^0.6.0"
streamlit-on-Hover-tabs = "^1.0.1"
sympy = "^1.12"
tensorboard = "^2.16.2"
tiktoken = "^0.6.0"
torch = {file = "torch-2.2.2+cu121-cp311-cp311-win_amd64.whl"}
torchinfo = "^1.8.0"
torchtext = "^0.17.2"
torchvision = "^0.17.2"
tqdm = "^4.66.2"
transformer-lens = "^1.15.0"
wandb = "0.13.10"
nbstripout = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
